common-applications/test-environment/sync-bot/sync-bot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sync-bot-service
  namespace: sync-bot
spec:
  ports:
    - name: sync-bot
      port: 8765
      protocol: TCP
      targetPort: 8765
  selector:
    app: sync-bot
  type: ClusterIP
