common-applications/test-environment/sync-bot/sync-bot/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: sync-bot-ingress
  namespace: sync-bot
spec:
  rules:
  - host: sync-bot.test.osinfra.cn
    http:
      paths:
      - backend:
          serviceName: sync-bot-service
          servicePort: 8765
        path: /
  tls:
  - hosts:
    - sync-bot.test.osinfra.cn
    secretName: sync-bot-osinfra-cn-tls
